--- a/package.json
+++ b/package.json
@@ -20,10 +20,10 @@
   "homepage": "https://github.com/study-system/EIN-server#readme",
   "dependencies": {
     "express": "^4.17.1",
-    "express-validator": "^6.6.1",
     "mysql2": "^2.1.0",
     "swagger-jsdoc": "^4.0.0",
-    "swagger-ui-express": "^4.1.4"
+    "swagger-ui-express": "^4.1.4",
+    "validator": "^13.1.1"
   },
   "devDependencies": {
     "eslint": "^7.6.0",
