--- a/package.json
+++ b/package.json
@@ -21,9 +21,10 @@
   "dependencies": {
     "express": "^4.17.1",
     "mysql2": "^2.1.0",
-    "swagger-jsdoc": "^4.0.0",
+    "nodemailer": "^6.4.11",
     "swagger-ui-express": "^4.1.4",
-    "validator": "^13.1.1"
+    "validator": "^13.1.1",
+    "yamljs": "^0.3.0"
   },
   "devDependencies": {
     "eslint": "^7.6.0",
