--- a/src/api/swagger/ein-server.yml
+++ b/src/api/swagger/ein-server.yml
@@ -46,7 +46,7 @@ paths:
 
   /user:
     post:
-      summary: 회원 가입
+      summary: 회원 가입 (개발중)
       tags: [user]
       responses:
         '200':
@@ -656,7 +656,7 @@ paths:
 
     get:
       tags: [board]
-      summary: 익명 댓글 목록을 반환함 (개발중)
+      summary: 익명 댓글 목록을 반환함
       responses:
         '200':
           description: OK
@@ -682,11 +682,13 @@ paths:
                           description: 게시글 작성자 여부 확인 플래그
 
     post:
-      summary: 익명 댓글 추가 (개발중)
+      summary: 익명 댓글 추가
       tags: [board]
       responses:
-        '200':
+        '201':
           description: OK
+        '400':
+          description: 존재하지 않은 게시글에 등록하는 경우등 예외 상황에서 발생
       requestBody:
         content:
           application/json:
