--- a/src/api/swagger/ein-server.yml
+++ b/src/api/swagger/ein-server.yml
@@ -44,6 +44,67 @@ paths:
         '200':
           description: OK
 
+  /authUser:
+    post:
+      summary: 인증 회원 가입 (개발중, db comany_number 수정 필요)
+      tags: [user]
+      responses:
+        '200':
+          description: OK
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                email:
+                  type: string
+                  format: email
+                  example: myks790@gmail.com
+                password:
+                  type: string
+                  example: 1234
+                name:
+                  type: string
+                  example: 강상훈
+                nickname:
+                  type: string
+                  example: 닉네임
+                phone:
+                  type: string
+                  example: 01012345678
+                address:
+                  type: string
+                  example: 제주도 특별자치도 제주시 진남로 99길 10
+                detail address:
+                  type: string
+                  example: 101호
+                locaion:
+                  type: integer
+                  example: 17
+                push agree:
+                  type: string
+                  example: yes
+                  enum:
+                    - yes
+                    - no
+                company:
+                  type: string
+                  example: 회~사
+                company_number:
+                  type: string
+                  example: 06412345678
+                position:
+                  type: string
+                  example: 대리
+                website:
+                  type: string
+                  example: yes
+                  enum:
+                    - yes
+                    - no
+
+
   /user:
     post:
       summary: 회원 가입 (개발중)
