--- a/src/api/swagger/ein-server.yml
+++ b/src/api/swagger/ein-server.yml
@@ -542,7 +542,7 @@ paths:
   /blacklist:
     get:
       tags: [blacklist]
-      summary: 블랙리스트 목록을 반환함 (개발중 db or 문서 수정 필요 동의 여부 관련)
+      summary: 블랙리스트 목록을 반환함 (개발중 db or 문서 수정 필요 동의 여부 관련, user_email과 blacklist_id에서 email, id 중 하나로 통일 필요)
       responses:
         '200':
           description: OK
