--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "connect-redis": "^5.0.0",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
+    "firebase-admin": "^9.1.0",
+    "multer": "^1.4.2",
     "mysql2": "^2.1.0",
     "nodemailer": "^6.4.11",
     "passport": "^0.4.1",
