--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "passport-local": "^1.0.0",
     "redis": "^3.0.2",
     "swagger-ui-express": "^4.1.4",
+    "uuid": "^8.3.0",
     "validator": "^13.1.1",
     "yamljs": "^0.3.0"
   },
