--- a/src/api/swagger/ein-server.yml
+++ b/src/api/swagger/ein-server.yml
@@ -234,7 +234,7 @@ paths:
                     example: error message
 
     put:
-      summary: 유저 정보를 수정함 (개발중) 
+      summary: 유저 정보를 수정함 
       tags: [user]
       responses:
         '200':
